<?xml version="1.0"?>
<package format="3">
  <name>conveyor</name>
  <version>0.0.0</version>
  <description>Conveyor driver</description>
  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
